# esp-claw

./: .gitignore  CHANGELOG.md  README.md  README_CN.md
.github/workflows/: deploy-docs-pages.yml
.gitlab/ci/: build.yml  check_copyright_config.yaml  deploy_firmware.py  merge_bin.py  rules.yml
application/: .build-rules.yml
application/basic_demo/: CMakeLists.txt  README.md  esp_claw_k10_deployment_guide.md
application/basic_demo/.omx/: metrics.json
application/basic_demo/main/: CMakeLists.txt  Kconfig.projbuild  app_claw.c  app_clawgent.c  basic_demo_cli.c  basic_demo_lua_modules.c  basic_demo_settings.h  config_http_server.c  idf_component.yml  k10_display.c  k10_display.h  k10_extension.c  k10_extension.h  main.c
application/basic_demo/main/web/: app.js  index.html  styles.css
application/basic_demo/tools/: sync_component_skills.py
application/edge_agent/: .gitignore  CMakeLists.txt  README.md  partitions_16MB.csv  partitions_8MB.csv  sdkconfig.console.jtag  sdkconfig.defaults
application/edge_agent/components/http_server/: CMakeLists.txt  http_server_assets.c  http_server_config_api.c  http_server_core.c  http_server_files_api.c  http_server_priv.h  http_server_status_api.c  http_server_webim_api.c  http_server_wechat_api.c
application/edge_agent/components/http_server/frontend_source/src/: App.tsx
application/edge_agent/components/http_server/frontend_source/src/api/: client.ts
application/edge_agent/components/http_server/frontend_source/src/components/layout/: LanguageSwitcher.tsx  Sidebar.tsx
application/edge_agent/components/http_server/frontend_source/src/components/ui/: FormField.tsx  SavePanel.tsx  ToastViewport.tsx
application/edge_agent/components/http_server/frontend_source/src/i18n/: en.ts  zh-cn.ts
application/edge_agent/components/http_server/frontend_source/src/pages/: BasicPage.tsx  CapabilitiesPage.tsx  LlmPage.tsx  SearchPage.tsx  SetupWizardPage.tsx  SkillsPage.tsx  StatusPage.tsx  WebImPage.tsx
application/edge_agent/components/http_server/include/: http_server.h
application/edge_agent/components/http_server/web/: THIRD_PARTY_LICENSE  app.js  index.html  lean-qr.min.mjs  styles.css
application/edge_agent/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
application/edge_agent/tools/: bmgr_patch.py  esp-idf.patch  sync_component_lua_scripts.py  sync_component_skills.py
components/claw_capabilities/cap_boards/: CMakeLists.txt
components/claw_capabilities/cap_boards/tools/: generate_board_skill.py
components/claw_capabilities/cap_im_feishu/: CMakeLists.txt  idf_component.yml
components/claw_capabilities/cap_im_platform/: CMakeLists.txt
components/claw_capabilities/cap_lua/: CMakeLists.txt
components/claw_modules/claw_memory/: CMakeLists.txt
components/common/app_claw/: CMakeLists.txt  Kconfig  app_capabilities.c  app_claw.c  app_claw_cli.c  (+2 more)
docs/: .gitignore  package.json5  pnpm-lock.yaml
docs/tools/: generate-firmware-json.ts
(+163 files in other folders)
